--- a/SMS/Base.lproj/Main.storyboard
+++ b/SMS/Base.lproj/Main.storyboard
@@ -513,6 +513,83 @@
             </objects>
             <point key="canvasLocation" x="-1204" y="2380"/>
         </scene>
+        <!--Directorio-->
+        <scene sceneID="cGh-yr-2sq">
+            <objects>
+                <viewController storyboardIdentifier="DirectorioVC" title="Directorio" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Htp-sw-vXK" customClass="DirectorioVC" customModule="SMS" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ixG-Yo-Zfk"/>
+                        <viewControllerLayoutGuide type="bottom" id="hnj-EO-tTb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="vhc-X6-uO0">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SzA-U9-SOy">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="100" id="BxJ-G2-SaO" userLabel="cell" customClass="TableViewCell" customModule="SMS" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="BxJ-G2-SaO" id="jeO-dZ-3jL">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Dr. Bad Bunny" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AdP-bn-8zv" userLabel="Label Nombre Directiva">
+                                                    <rect key="frame" x="115" y="8" width="178" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Ponente_ausente_Hombre.png" translatesAutoresizingMaskIntoConstraints="NO" id="oem-Hk-xA7" userLabel="Imagen Perfil Directiva">
+                                                    <rect key="frame" x="8" y="8" width="70" height="70"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Puerto Rico" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YFu-0u-suE" userLabel="Label Lugar Directiva">
+                                                    <rect key="frame" x="115" y="33" width="169" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Presidente" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5GN-18-yFT" userLabel="Label Cargo Directiva">
+                                                    <rect key="frame" x="115" y="55" width="169" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="imagenPerfil" destination="oem-Hk-xA7" id="2nY-im-PbM"/>
+                                            <outlet property="labelInstitucion" destination="5GN-18-yFT" id="MK2-nL-y9W"/>
+                                            <outlet property="labelLugarPersona" destination="YFu-0u-suE" id="3gU-1V-RPY"/>
+                                            <outlet property="labelNombre" destination="AdP-bn-8zv" id="hNN-oS-5Vf"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Htp-sw-vXK" id="3sj-Ka-fnu"/>
+                                    <outlet property="delegate" destination="Htp-sw-vXK" id="e55-Hw-ct4"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Directorio" image="directiva.png" id="QVO-vI-4sP"/>
+                    <navigationItem key="navigationItem" id="b4a-vt-cJH"/>
+                    <connections>
+                        <outlet property="tabla" destination="SzA-U9-SOy" id="Is6-18-CUY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ykA-Sn-nJl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2962" y="2380"/>
+        </scene>
         <!--Ponentes-->
         <scene sceneID="PfE-4g-e74">
             <objects>
@@ -544,7 +621,7 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Universidad de Concepción" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k1t-zm-B4f">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k1t-zm-B4f">
                                                     <rect key="frame" x="115" y="33" width="169" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
@@ -891,11 +968,12 @@
                         <segue destination="BrK-EM-h98" kind="relationship" relationship="viewControllers" id="B98-dS-GYU"/>
                         <segue destination="LGy-tf-vRe" kind="relationship" relationship="viewControllers" id="zhZ-wB-Ecj"/>
                         <segue destination="INc-YK-7hn" kind="relationship" relationship="viewControllers" id="Fus-MX-KpB"/>
+                        <segue destination="Htp-sw-vXK" kind="relationship" relationship="viewControllers" id="3RD-sE-eOB"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qge-Ow-08L" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2961" y="1283"/>
+            <point key="canvasLocation" x="-2962" y="1576"/>
         </scene>
         <!--Detalle PersonaVC-->
         <scene sceneID="zcC-2T-WnG">
